@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<KeyListEntries schema="org.compiz.integrated" wm_name="Compiz" group="system" _name="Launchers" package="compiz">
-
-	<KeyListEntry name="run-command-terminal" _description="Launch Terminal"/>
-
-</KeyListEntries>
